# datasheet_aggregator_10th

./: .gitignore  README.md  flake.nix  list_example.txt  main.py  pyproject.toml  requirements.txt
data/: pdf_index_schema.json
data/pdf_index/: Adepta Sororitas.yaml  Agents of the Imperium.yaml  Chaos Daemons.yaml  Chaos Knights.yaml  Chaos Space Marines.yaml  Grey Knights.yaml  Horus Heresy Legends -- Adeptus Astartes.yaml  Horus Heresy Legends: Adeptus Astartes.yaml  Imperial Armour -- Astartes.yaml  Imperial Armour -- Chaos Knights.yaml  Imperial Armour -- Imperial Knights.yaml  Imperial Armour -- T’au Empire.yaml  Imperial Armour: Astartes.yaml  Imperial Knights.yaml  Legends -- Adeptus Astartes.yaml  Legends -- T’au Empire.yaml  Space Marines -- Blood Angels.yaml  Space Marines -- Dark Angels.yaml  Space Marines.yaml  Space Marines: Dark Angels.yaml  Thousand Sons.yaml  T’au Empire.yaml
examples/: Firestorm.iphone.txt  example_chaos_space_marines.txt  example_space_marines.txt  example_t'au_empire.txt
src/: __main__.py
